feat: implement better validation error details response plus convert any camelCase field values to snake_case